--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,9 @@ security:
     encoders:
         App\Entity\User:
             algorithm: argon2i
-
+    role_hierarchy :
+        ROLE_ADMIN :       ROLE_USER
+        # ROLE_SUPER_ADMIN : [ ROLE_ADMIN , ROLE_ALLOWED_TO_SWITCH ]
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
@@ -18,6 +20,14 @@ security:
             security: false
         main:
             anonymous: true
+            guard:
+                authenticators:
+                    - App\Security\LoginAuthenticator
+            logout: 
+                path: app_logout
+                target: /login
+
+
 
             # activate different ways to authenticate
 
@@ -30,5 +40,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+        #  - { path: ^/, roles: ROLE_USER }
